--- a/themes/feuerwehr-hungen/scss/theme.scss
+++ b/themes/feuerwehr-hungen/scss/theme.scss
@@ -50,3 +50,11 @@
   color: $fw-blue;
   font-weight: bold;
 }
+
+.modular-text {
+  padding: 40px 16px;
+}
+
+.frame-box {
+  margin: -3rem -1.4rem 2.5rem;
+}
