--- a/themes/feuerwehr-hungen/templates/modular/profiles.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/profiles.html.twig
@@ -1,4 +1,4 @@
-{%  block stylesheets %}
+{% block stylesheets %}
     {% do assets.addCss('theme://css-compiled/profiles.min.css') %}
 {% endblock %}
 
@@ -18,72 +18,81 @@
 
 <section class="modular-profiles">
     <div class="container {{ grid_size }}">
+        <div class="profiles-content">
 
-        {{ content|raw }}
+            {{ content|raw }}
 
-        <div class="columns">
-            {% for profile in page.header.profiles %}
-                {% if page.header.content_align == 'left' and profile.content %}
-
-                <div class="column profile-column col-6 col-md-6 col-sm-12 text-column">
-
-                    {{ profile.content|markdown(true) }}
-
-                </div>
-                {% endif %}
-
-
-            <div class="column profile-column col-6 col-md-6 col-sm-12 ">
-                <div class="profile-card">
-                    <div class="ds-top"></div>
-                    <div class="avatar-holder">
-                        <img src="user/themes/feuerwehr-hungen/images/profile-images/{{ profile.picked_image }}" alt="Albert Einstein">
-                    </div>
-                    <div class="name">
-                        <p>{{ profile.vorname }} {{ profile.name }}</p>
-                        {% if profile.deployment %}
-                        <h6 title="Einsätze"><i class="fas fa-users"></i> <span class="followers">{{ profile.deployment }}</span></h6>
-                        {% endif %}
-                    </div>
-                    <button class="profile-btn">
-                        {{ profile.function }}
-                    </button>
-                    <div class="ds-info">
-                        <div class="ds pens">
-                            <h6 title="Email"><i class="fa-solid fa-envelope beforI"></i>
-                                <div class="tooltip">
-                                    <button class="btn">
-                                        {{ profile.email }} <a onclick="copyToClipboard('{{ profile.email }}')"><i class="fa-regular fa-copy"></i><span class="tooltiptext" id="{{ profile.email }}-tooltip">Copy to clipboard</span></a>
-                                    </button>
-                                </div>
-                            </h6>
-                        </div>
-                    </div>
-                    <div class="ds-info">
-                        <div class="ds projects">
-                            {% if profile.tel %}
-                            <h6 title="Telefon"><i class="fa-solid fa-phone beforI"></i>
-                                <button class="btn">{{ profile.tel }} <a onclick="copyToClipboard('{{ profile.email }}')"><i class="fa-regular fa-copy"></i></a>
-                                </button>
-                            </h6>
-                            {% endif %}
-                        </div>
-                    </div>
-                    <div class="ds-info">
-
-                    </div>
-                </div>
-            </div>
-                {%  if page.header.content_align == 'right' and profile.content %}
-                    <div class="column profile-column col-6 col-md-6 col-sm-12 text-column">
-
-                        {{ profile.content|markdown(true) }}
-
-                    </div>
-
-                {% endif %}
-            {% endfor %}
         </div>
-    </div>
+    {% if page.header.content_align == 'right' and page.header.order_mobile == 'text-first' %}
+        <div class="columns mobile-reorder">
+    {% else %}
+        <div class="columns">
+    {% endif %}
+                {% for profile in page.header.profiles %}
+                    {% if page.header.content_align == 'left' and profile.content %}
+
+                        <div class="column profile-column col-6 col-md-6 col-sm-12 text-column">
+
+                            {{ profile.content|markdown(true) }}
+
+                        </div>
+                    {% endif %}
+
+
+                    <div class="column profile-column col-6 col-md-6 col-sm-12 ">
+                        <div class="profile-card">
+                            <div class="ds-top"></div>
+                            <div class="avatar-holder">
+                                <img src="user/themes/feuerwehr-hungen/images/profile-images/{{ profile.picked_image }}"
+                                     alt="Albert Einstein">
+                            </div>
+                            <div class="name">
+                                <p>{{ profile.vorname }} {{ profile.name }}</p>
+                                {% if profile.deployment %}
+                                    <h6 title="Einsätze"><i class="fas fa-users"></i> <span
+                                                class="followers">{{ profile.deployment }}</span></h6>
+                                {% endif %}
+                            </div>
+                            <button class="profile-btn">
+                                {{ profile.function }}
+                            </button>
+                            <div class="ds-info">
+                                <div class="ds pens">
+                                    <h6 title="Email"><i class="fa-solid fa-envelope beforI"></i>
+                                        <button class="btn tooltip" onclick="copyToClipboard('{{ profile.email }}')">
+                                            {{ profile.email }} <i class="fa-regular fa-copy"></i><span
+                                                    class="tooltiptext" id="{{ profile.email }}-tooltip"></span>
+                                        </button>
+                                    </h6>
+                                </div>
+                            </div>
+                            <div class="ds-info">
+                                <div class="ds projects">
+                                    {% if profile.tel %}
+                                        <h6 title="Telefon"><i class="fa-solid fa-phone beforI"></i>
+                                            <button class="btn">{{ profile.tel }} <a
+                                                        onclick="copyToClipboard('{{ profile.email }}')"><i
+                                                            class="fa-regular fa-copy"></i></a>
+                                            </button>
+                                        </h6>
+                                    {% endif %}
+                                </div>
+                            </div>
+                            <div class="ds-info">
+
+                            </div>
+                        </div>
+                    </div>
+                    {% if page.header.content_align == 'right' and profile.content %}
+                        <div class="column profile-column col-6 col-md-6 col-sm-12 text-column">
+
+                            {{ profile.content|markdown(true) }}
+
+                        </div>
+
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
 </section>
 
