--- a/themes/feuerwehr-hungen/scss/profiles.scss
+++ b/themes/feuerwehr-hungen/scss/profiles.scss
@@ -17,7 +17,7 @@
   }
 
   .profiles-content {
-    padding: 15px 0;
+    padding: 15px 0.4rem;
   }
 }
 
@@ -30,7 +30,7 @@
 
 
 .text-column {
-  padding: 0 25px;
+  padding: 0 .8rem !important;
   color: $fw-blue;
 
   h2 {
