--- a/themes/feuerwehr-hungen/templates/partials/hero.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/hero.html.twig
@@ -3,5 +3,10 @@
     <section class="container {{ grid_size }}" style="text-align: {{ page.header.hero_align|default('center') }}">
         {{ content|raw }}
     </section>
-    <i id="to-start" class="pulse fa fa-angle-down"></i>
+    <div class='scrolldown' id="to-start">
+        <div class="chevrons">
+            <div class='chevrondown'></div>
+            <div class='chevrondown'></div>
+        </div>
+    </div>
 </section>
