Adjust styling for heading and technic page

--- a/themes/feuerwehr-hungen/templates/modular/glight.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/glight.html.twig
@@ -42,7 +42,7 @@
 {% set innerPic = page.header.entryInnerPic %}
 
 
-<section class="section pair">
+<section class="section pair glight-section">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
