--- a/themes/feuerwehr-hungen/templates/partials/blog-item.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/blog-item.html.twig
@@ -1,4 +1,7 @@
-<div class="content-item h-entry">
+<link rel="type/stylesheet" href="{{ url('theme://css-compiled/theme.min.css') }}" />
+
+
+<div class="content-item h-entry" id="blog-item">
 
 {% if not hero_image_name %}
     <div class="content-title text-center">
