Update ical link

--- a/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
@@ -39,7 +39,7 @@
         </div>
 
         <div class="card-footer">
-            <a href="https://grav.dev.ff-inheiden.de/ical">iCal-Feed zum Abonnieren</a>
+            <a href="https://www.ff-Inheiden.de/ical">iCal-Feed zum Abonnieren</a>
         </div>
     </div>
 
