--- a/themes/feuerwehr-hungen/scss/carousel.scss
+++ b/themes/feuerwehr-hungen/scss/carousel.scss
@@ -38,7 +38,7 @@
 // overrides glightbox defaults
 
 .description-right {
-  max-width: 320px !important;
+  max-width: 375px !important;
 }
 
 .description-right .gdesc-inner {
@@ -58,8 +58,15 @@
   display: inline-flex !important;
 }
 
+.glightbox-open .gslide-media {
+  width: 65%;
+}
+
+.glightbox-open.glightbox-mobile .gslide-media {
+  width: 100%;
+}
+
 .glightbox-open .gslide-media img{
-  width: 95% !important;
   margin-right: 0;
 }
 
