--- a/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
@@ -201,6 +201,7 @@
                                     data-type="image"
                                     data-effect="fade"
                                     data-height="auto"
+                                    data-width="900px"
                                     data-zoomable="true"
                                     data-draggable="true"
                             >
