--- a/themes/feuerwehr-hungen/templates/modular/glight.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/glight.html.twig
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="{{ url('theme://css-compiled/fw-glight.min.css') }}" />
+</head>
 
 <script type="text/javascript" src="{{ url('theme://js/glightbox.min.js') }}"></script>
 
@@ -62,7 +65,6 @@
                                         data-type="image"
                                         data-effect="fade"
                                         data-height="auto"
-                                        data-width="900px"
                                         data-zoomable="true"
                                         data-draggable="true"
                                 >
