--- a/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
@@ -76,7 +76,7 @@
                         <button data-id="${item.id}" data-size="${item.size}">+</button>
                     </div>
                     <p>${item.price}€</p>
-                    <button data-id="${item.id}" data-size="${item.size}" class="cart-product">D</button>
+                    <button data-id="${item.id}" data-size="${item.size}" class="cart-product"><i class="fa-solid fa-trash"></i></button>
                 </div>
             </div>`
             );
