Add order overview page with full functionality and internal navbar

--- a/themes/feuerwehr-hungen/templates/modular/modular-navbar.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/modular-navbar.html.twig
@@ -50,7 +50,8 @@
     <div class="container">
         <ul class="menu-bar">
             <li>Feuerwehr Wiki</li>
-            <li>Bestellungen</li>
+            <li><a href="{{ url('/intern') }}">Shop</a></li>
+            <li><a href="{{ url('/bestellungen') }}">Bestellungen</a></li>
             <li>Anwesenheitsliste</li>
             <li>Einsatzliste</li>
         </ul>
